--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <link rel="stylesheet" href="assets/css/normalreset.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
-<body>
+<body onselectstart="alert('Защищено авторским правом!')">
   <header>
     <div class="container">
       <div class="header__inner flex-base">
@@ -80,35 +79,8 @@
           <div class="schedule__columns-two">
             <div class="schedule__item flex">
               <div class="schedule__item-top flex-base">
-                <img class="schedule__item-img" src="assets/img/icon-1.svg" alt="">
-                <div class="schedule__item-number">01</div>
-              </div>
-              <div class="schedule__item-middle">
-                <h4 class="subject schedule__item-subject">Summer Camp (June - August)</h4>
-                <p class="schedule__item-text">Intensive 1-3 week sessions for ages 7-18, focusing on pre-season
-                  preparation</p>
-                <ul class="schedule__item-list">
-                  <li class="schedule__item-point">2 ice days</li>
-                  <li class="schedule__item-point">2 land days</li>
-                  <li class="schedule__item-point">game thinking simulator</li>
-                  <li class="schedule__item-point">athlete psychology course</li>
-                  <li class="schedule__item-point">game with AAA team sonce a week</li>
-                  <li class="schedule__item-point">personal coaching</li>
-                </ul>
-              </div>
-              <div class="schedule__item-bottom">
-                <p class="subject schedule__item-subject">Date:</p>
-                <ul class="schedule__item-dates">
-                  <li class="schedule__item-date">19.05.25-24.05.25</li>
-                  <li class="schedule__item-date">26.05.25-31.05.25</li>
-                  <li class="schedule__item-date">02.07.25-12.07.25</li>
-                </ul>
-              </div>
-            </div>
-            <div class="schedule__item flex">
-              <div class="schedule__item-top flex-base">
                 <img class="schedule__item-img" src="assets/img/icon-2.svg" alt="">
-                <div class="schedule__item-number">02</div>
+                <div class="schedule__item-number">01</div>
               </div>
               <div class="schedule__item-middle">
                 <h4 class="subject schedule__item-subject">Winter Camp (December - January)</h4>
@@ -135,7 +107,7 @@
             <div class="schedule__item flex">
               <div class="schedule__item-top flex-base">
                 <img class="schedule__item-img" src="assets/img/icon-3.svg" alt="">
-                <div class="schedule__item-number">03</div>
+                <div class="schedule__item-number">02</div>
               </div>
               <div class="schedule__item-middle">
                 <h4 class="subject schedule__item-subject">Spring Camp (March - May)</h4>
@@ -152,6 +124,34 @@
                 <ul class="schedule__item-dates">
                   <li class="schedule__item-date">08.04.25-13.04.25</li>
                   <li class="schedule__item-date">15.04.25-20.04.25</li>
+                  <li class="schedule__item-date none">&nbsp;</li>
+                </ul>
+              </div>
+            </div>
+            <div class="schedule__item flex">
+              <div class="schedule__item-top flex-base">
+                <img class="schedule__item-img" src="assets/img/icon-1.svg" alt="">
+                <div class="schedule__item-number">03</div>
+              </div>
+              <div class="schedule__item-middle">
+                <h4 class="subject schedule__item-subject">Summer Camp (June - August)</h4>
+                <p class="schedule__item-text">Intensive 1-3 week sessions for ages 7-18, focusing on pre-season
+                  preparation</p>
+                <ul class="schedule__item-list">
+                  <li class="schedule__item-point">2 ice days</li>
+                  <li class="schedule__item-point">2 land days</li>
+                  <li class="schedule__item-point">game thinking simulator</li>
+                  <li class="schedule__item-point">athlete psychology course</li>
+                  <li class="schedule__item-point">game with AAA team sonce a week</li>
+                  <li class="schedule__item-point">personal coaching</li>
+                </ul>
+              </div>
+              <div class="schedule__item-bottom">
+                <p class="subject schedule__item-subject">Date:</p>
+                <ul class="schedule__item-dates">
+                  <li class="schedule__item-date">19.05.25-24.05.25</li>
+                  <li class="schedule__item-date">26.05.25-31.05.25</li>
+                  <li class="schedule__item-date">02.07.25-12.07.25</li>
                 </ul>
               </div>
             </div>
@@ -172,7 +172,8 @@
                 <p class="subject schedule__item-subject">Date:</p>
                 <ul class="schedule__item-dates">
                   <li class="schedule__item-date">At any time by agreement</li>
-                  <li class="schedule__item-date fourth">&nbsp;</li>
+                  <li class="schedule__item-date none">&nbsp;</li>
+                  <li class="schedule__item-date none">&nbsp;</li>
                 </ul>
               </div>
             </div>
@@ -323,31 +324,128 @@
         </ul>
       </div>
     </section>
-    <!-- <section class="partners">
+     <section class="partners">
       <div class="container">
         <h2 class="subtitle partners__subtitle">Our <span>Partners</span></h2>
-        <div class="use__box-container flex">
-          <ul class="use__items flex">
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-1.png" alt="winners hockey school">
+        <div class="partners__container flex">
+          <ul class="partners__items flex">
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-1.png" alt="winners hockey school">
             </li>
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-2.svg" alt=""></li>
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-3.png" alt="biosteel"></li>
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-4.svg" alt="sportcheck"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-2.svg" alt=""></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-3.png" alt="biosteel"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-4.svg" alt="sportcheck"></li>
+            </li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-1.png" alt="winners hockey school">
+            </li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-2.svg" alt=""></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-3.png" alt="biosteel"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-4.svg" alt="sportcheck"></li>
             </li>
           </ul>
-          <ul aria-hidden="true" class="use__items use__items--true flex">
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-1.png" alt="winners hockey school">
+          <ul aria-hidden="true" class="partners__items partners__items--true flex">
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-1.png" alt="winners hockey school">
             </li>
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-2.svg" alt=""></li>
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-3.png" alt="biosteel"></li>
-            <li class="use__item"><img class="use__item-img" src="assets/img/partner-4.svg" alt="sportcheck"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-2.svg" alt=""></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-3.png" alt="biosteel"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-4.svg" alt="sportcheck"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-1.png" alt="winners hockey school">
+            </li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-2.svg" alt=""></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-3.png" alt="biosteel"></li>
+            <li class="partners__item"><img class="partners__item-img" src="assets/img/partner-4.svg" alt="sportcheck"></li>
           </ul>
         </div>
       </div>
-    </section> -->
+    </section>
+    <section class="payment">
+      <div class="container">
+      <div class="payment__container flex">
+        <img class="payment__img" src="assets/img/payment-img.jpg" alt="Hawks">
+        <div class="payment__box">
+          <h2 class="subtitle payment__subtitle">Payment Options</h2>
+            <ul class="payment__list-box">
+              <li class="payment__list">
+                <p class="payment__list-label">Payment Method</p>
+                <div class="payment__list-line one"></div>
+                <p class="payment__list-text">Details</p>
+              </li>
+              <li class="payment__list">
+                <p class="payment__list-label">Online Payment</p>
+                <div class="payment__list-line"></div>
+                <p class="payment__list-text two">Secure system (Visa, MasterCard, PayPal)</p>
+              </li>
+              <li class="payment__list">
+                <p class="payment__list-label">Installment Plan</p>
+                <div class="payment__list-line"></div>
+                <p class="payment__list-text three">Option to split payment into parts</p>
+              </li>
+              <li class="payment__list">
+                <p class="payment__list-label">Discounts</p>
+                <div class="payment__list-line"></div>
+                <p class="payment__list-text four">Special offers for groups or early booking</p>
+              </li>
+            </ul>
+            <a class="btn red" href="/">Pay now 300 cad<svg class="icon-arrow">
+              <use href="#arrow-icon">
+            </svg></a>
+        </div>
+      </div>
+    </div>
+    </section>
+    <section class="visa" id="visa">
+      <div class="container">
+        <div class="visa__container flex">
+          <div class="visa__box">
+            <h2 class="subtitle visa__subtitle">Additional Services</h2>
+            <ul class="visa__items">
+              <li class="visa__item">
+                <h5 class="subject visa__subject">Visa Assistance</h5>
+                <p class="visa__text">We help with visa applications for
+                  international campers</p>
+              </li>
+              <li class="visa__item">
+                <h5 class="subject visa__subject">Airport Pickup</h5>
+                <p class="visa__text">Convenient airport meet-and-greet service for arriving campers</p>
+              </li>
+              <li class="visa__item">
+                <h5 class="subject visa__subject">Accommodation</h5>
+                <p class="visa__text">We assist with booking suitable accommodation for your stay</p>
+              </li>
+              <li class="visa__item">
+                <h5 class="subject visa__subject">Local Guidance</h5>
+                <p class="visa__text">Receive an entertainment map to explore Toronto during free time</p>
+              </li>
+            </ul>
+          </div>
+          <img class="visa__img" src="assets/img/visa-img.jpg" alt="Visa Assistance">
+        </div>
+        <div class="btn-box flex">
+        <a class="btn red" href="/registration.html">Registration<svg class="icon-arrow">
+          <use href="#arrow-icon">
+        </svg></a>
+      </div>
+      </div>
+    </section>
+    <section class="questions">
+      <div class="container">
+        <h2 class="subtitle questions__subtitle"><span>Frequently asked questions</span> about hockey camp</h2>
+        <div class="questions__items">
+          <div class="questions__item">
+            <button class="questions__item-caption">What do you need to bring to hockey camp?</button>
+            <p class="questions__item-text">
+              Parents can watch the training from the stands and take photos and videos. Parents are not allowed to be in the players' box, shout, talk to the child, or call him or her.
+            </p>
+          </div>
+          <div class="questions__item">
+            <button class="questions__item-caption">Can parents be present during training?</button>
+            <p class="questions__item-text">
+              Parents can watch the training from the stands and take photos and videos. Parents are not allowed to be in the players' box, shout, talk to the child, or call him or her.
+            </p>
+          </div>
+      </div>
+    </section>
+    section.contact>.container>.contact__container>h2.subtitle.contact__subtitle>[Contact Us]+.contact__box
   </main>
-
-
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="arrow-icon" viewBox="0 0 18 18" fill="none">
       <path d="M6.34309 5.31048L12.7346 5.31039M12.7346 5.31039L12.7346 11.611M12.7346 5.31039L5.30996 12.735"
