--- a/index.html
+++ b/index.html
@@ -453,7 +453,32 @@
     </symbol>
   </svg>
   </div>
-
+        <script data-skip-moving="true">
+            (function(w, d, s, o) {
+                var j = d.createElement(s);
+                j.async = true;
+                j.src = '//script.marquiz.ru/v2.js';
+                j.onload = function() {
+                    if (document.readyState !== 'loading')
+                        Marquiz.init(o);
+                    else
+                        document.addEventListener("DOMContentLoaded", function() {
+                            Marquiz.init(o);
+                        });
+                }
+                ;
+                d.head.insertBefore(j, d.head.firstElementChild);
+            }
+            )(window, document, 'script', {
+                host: '//quiz.marquiz.ru',
+                region: 'eu',
+                id: '661e8b347ec3420026297e6b',
+                autoOpen: 25,
+                autoOpenFreq: 'always',
+                openOnExit: true,
+                disableOnMobile: false
+            });
+        </script>
   <script src="assets/script/script.js"></script>
 </body>
 
